--- a/src/styles/LoginDialog.css
+++ b/src/styles/LoginDialog.css
@@ -344,3 +344,22 @@ h6,
   margin-bottom: 0.5rem;
   margin-top: 0;
 }
+
+.alert {
+  flex: 1;
+  position: relative;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-radius: 0.25rem;
+}
+
+.alert-danger {
+  color: #842029;
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+}
